--- a/common-composite-component-data/.classpath
+++ b/common-composite-component-data/.classpath
@@ -18,5 +18,5 @@
   <classpathentry kind="src" path="/sakai-common-edu-person-api"/>
   <classpathentry kind="src" path="/sakai-common-manager-api"/>
   <classpathentry kind="src" path="/sakai-common-type-api"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0RC2-SNAPSHOT/sakai-component-manager-1.0RC2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.2/sakai-component-manager-1.0.2.jar"/>
 </classpath>
