--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
     <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</developerConnection>
     <url>https://source.sakaiproject.org/svn/profile/trunk</url>
   </scm>
+  
+  <modules>
+    <module>components</module>
+    <module>profile-api</module>
+    <module>profile-app</module>
+    <module>profile-component-shared</module>
+  </modules>
+  
+  <!--
   <modules>
     <module>common-components</module>
     <module>common-composite-component</module>
@@ -28,6 +37,9 @@
     <module>profile-component-shared</module>
     <module>type-api</module>
   </modules>
+  -->
+  
+  
   <dependencyManagement>
     <dependencies>
       <dependency>
