--- a/edu-person-api/.classpath
+++ b/edu-person-api/.classpath
@@ -1,8 +1,8 @@
 <classpath>
-  <classpathentry kind="src" path="src/java"/>
+  <classpathentry kind="src" path="src/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
   <classpathentry kind="src" path="/sakai-common-manager-api"/>
   <classpathentry kind="src" path="/sakai-common-type-api"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
