--- a/profile-api/pom.xml
+++ b/profile-api/pom.xml
@@ -21,7 +21,7 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.sakaiproject</groupId>
+      <groupId>org.sakaiproject.common</groupId>
       <artifactId>sakai-common-edu-person-api</artifactId>
     </dependency>
   </dependencies>
