--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   <artifactId>profile-base</artifactId>
   <packaging>pom</packaging>
   <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/profile/trunk</url>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/sakai-2.7.x</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/sakai-2.7.x</developerConnection>
+    <url>https://source.sakaiproject.org/svn/profile/branches/sakai-2.7.x</url>
   </scm>
   
   <modules>
