--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.sakaiproject</groupId>
+        <groupId>org.sakaiproject.common</groupId>
         <artifactId>sakai-common-composite-component</artifactId>
-        <version>2.7-SNAPSHOT</version>
+        <version>${sakai.common.version}</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.jsf</groupId>
