--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>base</artifactId>
-    <groupId>org.sakaiproject</groupId>
-    <version>2.7-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <name>Sakai Profile Project</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>profile-base</artifactId>
-  <packaging>pom</packaging>
-  <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/</developerConnection>
-    <url>https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/</url>
-  </scm>
-  
-  <modules>
-    <module>components</module>
-    <module>profile-api</module>
-    <module>profile-app</module>
-    <module>profile-component-shared</module>
-  </modules>
-  
-  <!--
-  <modules>
-    <module>common-components</module>
-    <module>common-composite-component</module>
-    <module>common-composite-component-data</module>
-    <module>components</module>
-    <module>edu-person-api</module>
-    <module>manager-api</module>
-    <module>profile-api</module>
-    <module>profile-app</module>
-    <module>profile-component-shared</module>
-    <module>type-api</module>
-  </modules>
-  -->
+    <modelVersion>4.0.0</modelVersion>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.sakaiproject.common</groupId>
-        <artifactId>sakai-common-composite-component</artifactId>
-        <version>${sakai.common.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-tool-sun</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <parent>
+        <groupId>org.sakaiproject.purepoms</groupId>
+        <artifactId>sakai-standard-tool</artifactId>
+        <version>2.7.0-build04</version>
+    </parent>
+
+    <name>Sakai Profile Project</name>
+    <groupId>org.sakaiproject</groupId>
+    <artifactId>profile-base</artifactId>
+    <packaging>pom</packaging>
+
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        </connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        </developerConnection>
+        <url>https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        </url>
+    </scm>
+
+    <modules>
+        <module>components</module>
+        <module>profile-api</module>
+        <module>profile-app</module>
+        <module>profile-component-shared</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.sakaiproject.common</groupId>
+                <artifactId>sakai-common-composite-component
+                </artifactId>
+                <version>${sakai.common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>jsf-tool-sun</artifactId>
+                <version>${sakai.jsf.version}</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
