--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
     </scm>
 
     <modules>
-        <module>components</module>
         <module>profile-api</module>
         <module>profile-app</module>
+        <module>profile-components</module>
         <module>profile-component-shared</module>
     </modules>
 
