--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
+        <artifactId>sakai-commons-tool</artifactId>
         <version>2.7.0-build04</version>
     </parent>
 
-    <name>Sakai Profile Project base pom (profile)</name>
+    <name>Sakai Profile Base POM (profile)</name>
     <groupId>org.sakaiproject.profile</groupId>
     <artifactId>profile</artifactId>
     <version>2.7-SNAPSHOT</version>
@@ -38,6 +38,7 @@
                 <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <!--
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-edu-person-api</artifactId>
@@ -62,6 +63,7 @@
                 </artifactId>
                 <version>1.0.0-b02</version>
             </dependency>
+            -->
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
