--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,76 @@
     <version>2.7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>profile-api</module>
+        <module>profile-app</module>
+        <module>profile-components</module>
+        <module>profile-component-shared</module>
+    </modules>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven2-central-repo</id>
+            <name>Maven2 Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <repositories>
+        <repository>
+            <id>sakai-maven2</id>
+            <name>Sakai Maven Repository</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sakai-maven2-snapshots</id>
+            <name>Sakai Maven Repo Snapshots</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>default</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <scm>
         <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
         </connection>
@@ -23,13 +93,6 @@
         </url>
     </scm>
 
-    <modules>
-        <module>profile-api</module>
-        <module>profile-app</module>
-        <module>profile-components</module>
-        <module>profile-component-shared</module>
-    </modules>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -38,32 +101,6 @@
                 <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
-            <!--
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-edu-person-api</artifactId>
-                <version>1.0.0-b02</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.0.0-b02</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-type-api</artifactId>
-                <version>1.0.0-b02</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.sakaiproject.common</groupId>
-                <artifactId>sakai-common-composite-component
-                </artifactId>
-                <version>1.0.0-b02</version>
-            </dependency>
-            -->
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
@@ -77,4 +114,38 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <id>aggregate</id>
+                        <configuration>
+                            <aggregate>true</aggregate>
+                            <source>1.5</source>
+                            <encoding>UTF-8</encoding>
+                            <links>
+                                <link>http://java.sun.com/j2se/1.5.0/docs/api
+                                </link>
+                                <link>http://java.sun.com/products/servlet/2.3/javadoc/
+                                </link>
+                            </links>
+                            <breakiterator>true</breakiterator>
+                            <verbose>false</verbose>
+                            <maxmemory>512m</maxmemory>
+                            <additionalJOption>
+                                -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
+                            </additionalJOption>
+                        </configuration>
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
