--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>profile-api</module>
         <module>profile-app</module>
+        <module>profile-assembly</module>
         <module>profile-component</module>
         <module>profile-component-shared</module>
     </modules>
