--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +11,7 @@
     <name>Sakai Profile Base POM (profile)</name>
     <groupId>org.sakaiproject.profile</groupId>
     <artifactId>profile</artifactId>
-    <version>2.7-SNAPSHOT</version>
+    <version>2.7.0-b01</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -86,11 +86,11 @@
     </repositories>
 
     <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.7.0-b01
         </connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.7.0-b01
         </developerConnection>
-        <url>https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <url>https://source.sakaiproject.org/svn/profile/tags/profile-2.7.0-b01
         </url>
     </scm>
 
