--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>base</artifactId>
     <groupId>org.sakaiproject</groupId>
-    <version>2.6-SNAPSHOT</version>
+    <version>2.6.2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Profile Project</name>
@@ -33,12 +33,12 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-common-composite-component</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>2.6.2</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-jsf-sun-ri-tool</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>2.6.2</version>
         <type>pom</type>
       </dependency>
     </dependencies>
