--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-commons-tool</artifactId>
-        <version>2.7.0</version>
+        <version>2.7.1</version>
     </parent>
 
     <name>Sakai Profile Base POM (profile)</name>
@@ -105,7 +105,7 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>[2.7.0, 2.8.0)</version>
+                <version>[2.7.0,2.8.0)</version>
                 <type>pom</type>
             </dependency>
             <dependency>
