--- a/profile-api/pom.xml
+++ b/profile-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.profile</groupId>
         <artifactId>profile</artifactId>
-        <version>2.7.1-SNAPSHOT</version>
+        <version>2.7.1</version>
     </parent>
 
     <name>Sakai Profile API (profile-api)</name>
