--- a/profile-component-shared/pom.xml
+++ b/profile-component-shared/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.profile</groupId>
         <artifactId>profile</artifactId>
-        <version>2.7.2-SNAPSHOT</version>
+        <version>2.7.2</version>
     </parent>
 
     <name>Sakai Profile Components Shared (profile-component-shared)
