--- a/common-composite-component-data/.classpath
+++ b/common-composite-component-data/.classpath
@@ -17,6 +17,10 @@
   <classpathentry kind="src" path="/sakai-common-edu-person-api"/>
   <classpathentry kind="src" path="/sakai-common-manager-api"/>
   <classpathentry kind="src" path="/sakai-common-type-api"/>
-  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.12/sakai-component-manager-1.0.12.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.16/sakai-component-manager-1.0.16.jar" sourcepath="M2_REPO/org/sakaiproject/kernel/sakai-component-manager/1.0.16/sakai-component-manager-1.0.16-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/arwhyte/.m2/repository/org/sakaiproject/kernel/sakai-component-manager/1.0.16/sakai-component-manager-1.0.16-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 </classpath>
