--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>Sakai Profile Base POM (profile)</name>
     <groupId>org.sakaiproject.profile</groupId>
     <artifactId>profile</artifactId>
-    <version>2.7.3-SNAPSHOT</version>
+    <version>2.7.3</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -87,11 +87,11 @@
     </repositories>
 
     <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.7.3
         </connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.7.3
         </developerConnection>
-        <url>https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x/
+        <url>https://source.sakaiproject.org/svn/profile/tags/profile-2.7.3
         </url>
     </scm>
 
