--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-commons-tool</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>2.8.0-a01</version>
     </parent>
 
     <name>Sakai Profile Project</name>
@@ -69,7 +69,7 @@
                 <enabled>false</enabled>
             </releases>
             <snapshots>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </snapshots>
         </repository>
         <repository>
@@ -103,7 +103,7 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.8-SNAPSHOT</version>
+                <version>2.8.0-a01</version>
                 <type>pom</type>
             </dependency>
             <dependency>
