--- a/profile-help/pom.xml
+++ b/profile-help/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>profile</artifactId>
     <groupId>org.sakaiproject.profile</groupId>
-    <version>2.8.0-a02-SNAPSHOT</version>
+    <version>2.8.0-a02</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>Sakai Profile Help</name>
