--- a/profile-component/pom.xml
+++ b/profile-component/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.profile</groupId>
         <artifactId>profile</artifactId>
-        <version>2.7.4-SNAPSHOT</version>
+        <version>2.7.4</version>
     </parent>
 
     <name>Sakai Profile Components Package (profile-component)</name>
