--- a/profile-assembly/pom.xml
+++ b/profile-assembly/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.profile</groupId>
         <artifactId>profile</artifactId>
-        <version>2.8.0-a05-SNAPSHOT</version>
+        <version>2.8.0-b01</version>
     </parent>
 
     <name>Sakai Job profile Assembly (profile-assembly)</name>
