--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>Sakai Profile Project</name>
     <groupId>org.sakaiproject.profile</groupId>
     <artifactId>profile</artifactId>
-    <version>2.8.0-b02</version>
+    <version>2.8.0-b03-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -87,9 +87,9 @@
     </repositories>
 
     <scm>
-        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.8.0-b02</connection>
-        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/tags/profile-2.8.0-b02</developerConnection>
-        <url>https://source.sakaiproject.org/svn/profile/tags/profile-2.8.0-b02</url>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.8.x</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/branches/profile-2.8.x</developerConnection>
+        <url>https://source.sakaiproject.org/svn/profile/branches/profile-2.8.x</url>
     </scm>
 
     <dependencyManagement>
