--- a/profile-app/pom.xml
+++ b/profile-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.profile</groupId>
         <artifactId>profile</artifactId>
-        <version>2.8.0-b02</version>
+        <version>2.8.0-b03-SNAPSHOT</version>
     </parent>
 
     <name>Sakai Profile Tool (profile-tool)</name>
