--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-commons-tool</artifactId>
-        <version>2.8.0-b03</version>
+        <version>2.8.0-rc01</version>
     </parent>
 
     <name>Sakai Profile Project</name>
@@ -103,7 +103,7 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.8.0-b02</version>
+                <version>2.8.0-rc01</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
